fix alignment bottom

--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@
 /* --- COMMENTS SECTION --- */
 .comment-container {
   width: 100%;
-  max-height: 100px;
+  max-height: 110px;
   overflow-y: auto;
   border-top: 1px solid black;
   margin-top: 10px;
